5. Firefox:
    - Firefox colors will be updated later.
    - New stylish theme is being created.
6. Change lightdm background photo.
7. Updated ROFI to comply with main colors.
8. Got rid of runrofi.sh
    - Running Rofi is now handled in the i3 config file.
    - Values for Rofi are set in the .Xresources file.
9. Changed colors in top.
10. This configuration uses Compton.

--------------    

Changes in Dark theme
    - Date: January 04, 2017

1. Change main colors to beige, green, and red.
2. Change colors in CMUS.
3. Add new terminal theme (dark.theme).
    - Compressed winter.theme.
4. Changed yabar look to comply with main colors.
5. Firefox:
    - Previous current.css file is now compressed and renamed to winter.css.
    - Changed colors in current.css to comply with main colors.
    - Added Stylish CSS for Turbo Download Manager.
6. Changed lightdm background photo.
7. Updated ROFI to comply with main colors.
8. Added support for MPD in scripts/getmusicstatus.
    - Needs MPC to work.
    - Changed icons used when displaying music status in yabar.
9. Changed colors in top.
10. This configuration does not use Compton.

--------------    

Changes in Winter theme
    - Date: December 12, 2016

1. Change main colors to black, white, and green.
2. Change colors in CMUS.
3. Add new terminal theme (winter.theme).
    - Compressed other themes to clean up directory. Older configurations are now
      located in /terminal_themes/older_themes.zip.
4. Quit using i3status and started using yabar (/yabar).
    - Added workspace monitoring script in yabar.
    - Added other scripts that yabar may use in /scripts.
    - Added yabar config file (/yabar/yabar.conf).
5. Changed look and style of firefox homepage (stylesheet.css).
    - All links are now buttons.
    - Changed colors to green, white, and black.
6. Added new stylish CSS file (winter.css)
    - Compressed other CSS files to clean up directory. Older configurations are now